# sci-compiler

./: .gitignore  CMakeLists.txt  README.BAK  SC.BAK  anode.cpp  chartype.cpp  class.cpp  compiler.hpp  debug.hpp  define.cpp  error.cpp  error.hpp  expr.cpp  fileio.cpp  flake.nix  getargs.cpp  input.cpp  input.hpp  list.cpp  listing.cpp  memtype.hpp  new.cpp  opcodes.hpp  optimize.cpp  output.cpp  output.hpp  parse.cpp  resource.cpp  resource.hpp  sc.cpp  sc.hpp  selector.cpp  share.cpp  sol.hpp  string.hpp  symbol.cpp  symtbl.cpp  symtbl.hpp  text.hpp  token.cpp  (+2 more)
